2005-06-07  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* docs/C/figures: updated the figures.

2005-06-02  Jörgen Scheibengruber <mfcn@gmx.de>

	* README, ChangeLog, AUTHORS, src/*.c, src/*.h: utf-8 love by Benoît
	* pixmaps/, pixmaps/Makefile.am: added gnome-dev-loopback.png, gnome-dev-ppp.png
	and gnome-dev-plip.png 
	* configure.in: change homepage to http://www.wh-hms.uni-ulm.de/~mfcn/netspeed/
	* src/netspeed.c: (netspeed_applet_factory): added .../pixmaps/netspeed_applet/
	to icontheme-searchpath, added "changed" signal for icon_theme 
 	* src/netspeed.c: (change_icons): work on a copy composite ops..
	* src/netspeed.h: adjust icon filenames

2005-06-02  Benoît Dejean  <TazForEver@dlfp.org>

	* src/netspeed.c: (about_cb): Fixed my email.

2005-06-01  Jörgen Scheibengruber <mfcn@gmx.de>

	* src/netspeed.c: Added Pedro and Benoit to AUTHORS, applied patch from
    Pedro that makes the links work

2005-06-01  Jörgen Scheibengruber <mfcn@gmx.de>

	* src/netspeed.h/.c: Support icons from icon theme, instead of
	hard coded icons
	* pixmaps/*.xpm, pixmaps/Makefile.am: Remove the icons that are no longer needed

2005-05-27  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (showinfo_cb): if they are an ipv6 address
	we show it in the device details dialog.

	* config.h.in, configure.in: added checks for libgtop. (Benoit)
	* src/backend.c, src/backend.h: libgtop love, and support for ipv6.
	Thanks to Benoit Dejean for both patches. 

2005-05-26  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c: migration from GnomeColorPicker (deprecated)
	to GtkColorButton.
	

2005-05-11  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
        
	* docs/C/figures/*:  update the figures.
	* docs/es/*: added Spanish translation of the documentation, thanks
	to Juan Pablo Pincheira <jpincheira@gmail.com> for the screenshots.
	* configure.in: added ES doc.

2005-05-04  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
