@@ -1,6 +1,17 @@
+2005-06-07  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* netspeed.c: (search_for_up_if): take device with default gw, if possible
+	* backend.c/.h: add get_default_route() 
+
 2005-06-07  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
 
 	* docs/C/figures: updated the figures.
+
+2005-06-06  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* backend.c: (get_available_devices): remove duplicates from the list
+	* netspeed.c: (netspeed_applet_factory): auto_change_device = TRUE as default
+	* netspeed.c: (search_for_up_if): ignore "dummy*" devices
 
 2005-06-02  Jörgen Scheibengruber <mfcn@gmx.de>
 
